Configuring bonus audio player

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,12 +1,15 @@
-.build-menu-list {
-   background-color: var(--ion-color-secondary) !important;
-}
-
 ion-menu ion-icon ion-label{
    font-weight: 500 !important;
    font-size: 20px;
 }
 
-.item-inner {
-   border: unset !important
+@media (min-width: 992px) {
+   ion-menu {
+       min-width: 280px;
+       max-width: 20%;
+   }
+}
+
+.build-menu-list {
+   background-color: var(--ion-color-secondary) !important;
 }
