--- a/src/components/layouts/css/layout.css
+++ b/src/components/layouts/css/layout.css
@@ -1,3 +1,15 @@
 .layout-bg{
    --background: #fff url(../img/background-mobile.png) no-repeat center center / cover !important;
 }
+
+.top-bar {
+   position: sticky;
+   z-index: 1;
+   background: #fff;
+   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+   width: 100%;
+   top: 0px;
+   height: 55px;
+   padding-top: 15px;
+   text-transform: capitalize;
+}
