--- a/src/components/layouts/css/layout.css
+++ b/src/components/layouts/css/layout.css
@@ -35,3 +35,10 @@
 .card-title-text {
    font-size: 20px;
 }
+
+.ion-item-repo {
+   border: 1px solid #e4e4e4;
+   border-radius: 10px;
+   margin-top: 15px;
+   text-transform: capitalize;
+}
